tests/tooling/fixtures/native/recovery/positive/control_single_statement_bodies.objc3
module ControlSingleStatementBodies;

fn main() -> i32 {
  let x = 0;
  if (1)
    x = x + 1;
  else if (0)
    x = x + 100;
  else
    x = x + 10;

  let i = 0;
  while (i < 3)
    i = i + 1;

  for (let j = 0; j < 2; j = j + 1)
    x = x + j;

  let k = 0;
  do
    k = k + 1;
  while (k < 2);

  return x + i + k;
}
